# nugins

./: .build.yml  Cargo.toml  README.dj  README.md  mod.nu  nupass.nu  util.nu
completions/: c-pandoc.nu  completions.nu
endecode/: Cargo.toml  README.md
endecode/src/: main.rs  util.rs
endecode/src/command/: base58.rs  crockford.rs  deunicode.rs  html.rs  mod.rs  z32.rs  z85.rs
endecode/src/decode/: base32.rs  base32hex.rs  base58.rs  crockford.rs  mod.rs  z32.rs  z85.rs
endecode/src/encode/: base32.rs  base32hex.rs  base58.rs  crockford.rs  mod.rs  z32.rs  z85.rs
nupass/: README.md  mod.nu
template/: CHANGELOG.md  Cargo.toml  README.md
template/src/: json.rs  main.rs
