[workspace]
resolver = "2"
members = [
	"endecode",
	"template",
]

[workspace.dependencies]
nu-json = "0.100.0"
nu-plugin = "0.100.0"
nu-protocol = { version = "0.100.0", features = ["plugin"] }

base32 = "0.5.1"
base62 = "2.0.3"
bs58 = "0.5.1"
deunicode = "1.6.0"
html-escape = "0.2.13"
serde_json = "1.0.132"
tinytemplate = "1.2.1"
z85 = "3.0.5"
