[workspace]
resolver = "2"
members = [
	"endecode",
	"template",
]

[workspace.package]
edition = "2021"
license = "MPL-2.0"
authors = ["Andrej Kolčin <self@kaathewise.net>"]
repository = "https://github.com/kaathewisegit/nugins"

[workspace.dependencies]
nu-json = "0.101.0"
nu-plugin = "0.101.0"
nu-protocol = { version = "0.101.0", features = ["plugin"] }

base32 = "0.5.1"
base62 = "2.0.3"
bs58 = "0.5.1"
deunicode = "1.6.0"
html-escape = "0.2.13"
serde_json = "1.0.132"
tinytemplate = "1.2.1"
z85 = "3.0.5"
