[package]
name = "nu_plugin_endecode"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
description = "A plugin with various encoding schemes, from Crockford's base-32 to HTML entity escaping."
authors = ["Andrej Kolčin <self@kaathewise.net>"]
repository = "https://codeberg.org/kaathewise/nu-plugin"
keywords = ["nushell", "nushell-plugin", "codec"]

[dependencies]
nu-plugin = { workspace = true }
nu-protocol = { workspace = true }

base32 = "0.5.1"
base62 = "2.0.2"
bs58 = { version = "0.5.1", features = ["alloc"] }
deunicode = "1.6.0"
html-escape = "0.2.13"
z85 = "3.0.5"
