[package]
name = "nu_plugin_endecode"
version = "0.99.0"
edition = "2021"
license = "MPL-2.0"
description = "A plugin with various encoding schemes, from Crockford's base-32 to HTML entity escaping."
authors = ["Andrej Kolčin <self@kaathewise.net>"]
repository = "https://codeberg.org/kaathewise/nugins"
keywords = ["nushell", "nushell-plugin", "codec"]

[dependencies]
nu-plugin = { workspace = true }
nu-protocol = { workspace = true }

base32 = { workspace = true }
base62 = { workspace = true }
bs58 = { workspace = true, features = ["alloc"] }
deunicode = { workspace = true }
html-escape = { workspace = true }
z85 = { workspace = true }
