[package]
name = "nu_plugin_endecode"
version = "0.100.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "A plugin with various encoding schemes, from Crockford's base-32 to HTML entity escaping."
keywords = ["nushell", "nushell-plugin", "codec"]

[dependencies]
nu-plugin = { workspace = true }
nu-protocol = { workspace = true }

base32 = { workspace = true }
base62 = { workspace = true }
bs58 = { workspace = true, features = ["alloc"] }
deunicode = { workspace = true }
html-escape = { workspace = true }
z85 = { workspace = true }
