[package]
name = "nu_plugin_template"
version = "0.3.0"
edition = "2021"
license = "MPL-2.0"
description = "Templating in Nushell, powered by TinyTemplate"
authors = ["Andrej Kolčin <self@kaathewise.net>"]
repository = "https://codeberg.org/kaathewise/nu-plugin"
keywords = ["nushell", "nushell-plugin", "template"]

[dependencies]
nu-plugin = { workspace = true }
nu-protocol = { workspace = true }
nu-json = { workspace = true }
serde_json = "1.0.127"
tinytemplate = "1.2.1"
