[package]
name = "nu_plugin_template"
version = "0.101.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Templating in Nushell, powered by TinyTemplate"
keywords = ["nushell", "nushell-plugin", "template"]

[dependencies]
nu-plugin = { workspace = true }
nu-protocol = { workspace = true }
nu-json = { workspace = true }

serde_json = { workspace = true }
tinytemplate = { workspace = true }
